<resources>
    <!-- Strings related to app & activities -->
    <string name="app_name">Regiotainment MediaPlayer</string>
    <string name="title_activity_main_menu">Main menu</string>
    <string name="title_activity_live_stream">Live Stream</string>
    <string name="title_activity_mediathek">Media center</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_credtis">Credits</string>

    <!-- Strings related to MainMenuActivity -->
    <string name="welcome_text">Hello</string>
    <string name="wish_text">Have fun with the app!</string>
    <string name="app_closing_warning">Press AGAIN to leave the app.</string>
    <string name="not_available">Not available!</string>

    <!-- Strings related to menu -->
    <string name="menu_item_1">Live Stream</string>
    <string name="menu_item_2">Media center</string>
    <string name="menu_item_3">Credits</string>

    <!-- Strings related to LiveStream -->
    <string name="buffer_message">Stream is buffering...</string>

    <!-- Strings related to Settings -->
    <string name="menu_item_ausloggen">Logout</string>
    <string name="menu_item_einstellungen">Settings</string>
    <string name="menu_item_hilfe">Help</string>

    <string name="e_mail_address_preferences_key">E-Mail Key</string>

    <string name="landscape_preferences_key">Landscape Key</string>
    <string name="landscape_preferences_title">Landscape mode</string>
    <string name="landscape_preferences_summary">Streams are only shown in landscape mode</string>

    <string name="wlan_preferences_key">WLAN Key</string>
    <string name="wlan_preferences_title">Wi-Fi only</string>
    <string name="wlan_preferences_summary">Streams only use a Wi-Fi connection</string>

    <string name="delete_email_history_preferences_key">Delete History Key</string>
    <string name="delete_email_history_preferences_title">Delete e-mail history</string>
    <string name="delete_email_history_preferences_summary">Deletes the e-mail history of your logins</string>
    <string name="delete_email_history_preferences_toast">e-mail history has been deleted</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This E-Mail address is not valid!</string>
    <string name="error_incorrect_password">This password is not valid!</string>
    <string name="error_field_required">This is a required field!</string>
    <string name="stay_logged_in">Keep me logged in</string>

    <!-- Strings related to no activated WLAN Dialog -->
    <string name="enableWLAN">Enable Wi-Fi</string>
    <string name="cancel">Cancel</string>
    <string name="activateWlanMessagePart1">Wi-Fi is currently off.</string>
    <string name="activateWlanMessagePart2">Activate Wi-Fi now?</string>
    <string name="noWlan">No Wi-Fi network is avaiable</string>

    <!-- Strings related to no connection Dialog -->
    <string name="accept_button">Okay</string>
    <string name="noConnectionMessagePart1">Unable to connect to the internet.</string>
    <string name="noConnectionMessagePart2">Make sure that an internet connection exists and try again.</string>
    <string name="title_activity_help">Help</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to HelpActivity -->
    <string name="help_installation">Installation</string>
    <string name="help_disclaimer">Disclaimer</string>
    <string name="help_disclaimer_text">Der Autor dieses Programms haftet nicht für Schäden an Soft- oder
        Hardware oder Vermögensschäden, die durch das Benutzen des Programms entstehen!</string>
    <string name="help_system">System requirements</string>
    <string name="help_system_text1">1,5 GHz Quadcore Prozessor</string>
    <string name="help_system_text2">2GB RAM 20 MB verfügbarer Speicherplatz</string>
    <string name="help_system_text3">20 MB verfügbarer Speicherplatz</string>
    <string name="help_system_text4">Android 5.1.1 oder höher </string>
    <string name="help_system_text5">Netzwerkverbindung (mobile Daten oder WiFi)</string>
    <string name="help_googleplay">Google Play Store</string>
    <string name="help_googleplay_text">Wenn Sie die Applikation aus dem Google Play Store beziehen, haben sie nichts zu
        beachten und können die App wie jede andere Installieren.</string>
    <string name="help_unknownsource">App from unknown sources</string>
    <string name="help_unknownsource_text">Haben Sie die App als APK-Datei von einer anderen Quelle bezogen, so müssen Sie vor dem
        Installieren die Option „Unbekannte Herkunft von Apps zulassen“ aktivieren.
        Dazu gehen Sie in die Einstellungen ihres Mobiltelefons und wählen dort den
        Menüpunkt „Sicherheit“. Hier muss nun die oben genannte Option „Unbekannte
        Herkunft von Apps zulassen“ aktiviert werden, die genaue Bezeichnung kann abweichen.</string>
    <string name="help_operation">Operation</string>
    <string name="help_login">Login</string>
    <string name="help_login_text">Um die RTStreaming App nutzen zu können, müssen sie sich zunächst auf der
        RegioTainment Webseite einen Benutzeraccount anlegen. Mit den dort angelegten Login-Daten, können
        Sie sich nun bei der RTStreaming App anmelden. Dazu müssen Sie lediglich Ihre Emailadresse und ihr
        Passwort eintragen. Des Weiteren haben Sie die Möglichkeit, die Option „Eingeloggt bleiben“ anzuwählen,
        sodass Sie sich nicht jedes Mal erneut einloggen müssen.</string>
    <string name="help_mainmenu">Main Menu</string>
    <string name="help_mainmenu_text">Im Hauptmenü haben Sie die Möglichkeit, auf verschiedene Programme sowie einer
        Mediathek zuzugreifen. Um mehr Informationen zu einem Programm zu erhalten, tippen Sie auf die drei Punkte
        in der oberen rechten Ecke des jeweiligen Programms.</string>
    <string name="help_settings">Settings</string>
    <string name="help_settings_Landscape">Landscape Mode</string>
    <string name="help_settings_Landscape_text">Aktivieren Sie den Querformat-Modus, wenn sie wünschen, dass die Videos
        ausschließlich im Querformat abgespielt werden. Ist der Querformat-Modus nicht aktiviert, können Sie zwischen Hoch-
        und Querformat wechseln, indem Sie Ihr Mobiltelefon drehen. Dazu muss allerdings die „Autodreh“-Option in den
        Einstellungen Ihres Handys aktiviert sein.</string>
    <string name="help_settings_wlan">Only WLAN</string>
    <string name="help_settings_wlan_text">Wenn Sie wünschen, dass der Stream nur bei einer aktiven WLAN-Verbindung geladen wird,
        so aktivieren Sie die Option „Nur WLAN“. Eine Wiedergabe des Stream über Mobile Daten ist somit nicht mehr möglich. Dies
        ist von Vorteil, wenn Sie nur über ein geringes Datenvolumen verfügen. Ist das WLAN deaktiviert, so werden Sie mit einer
        Meldung darauf hingewiesen, und können es so aktivieren.</string>
    <string name="help_settings_email">Delete e-mail history</string>
    <string name="help_settings_email_text">Um den Verlauf der Email-Adressen, mit denen sich bereits eingeloggt wurde und die
        somit auf der Login-Seite als Vorschläge erscheinen, zu löschen, tippen Sie auf „E-Mail Verlauf löschen“.</string>
    <string name="help_errormessages">Error Messages</string>
    <string name="help_errormessages_nowlan">WLAN ist ausgeschaltet</string>
    <string name="help_errormessages_nowlan_text">Die Meldung, dass das WLAN ausgeschaltet ist, erscheint dann, wenn die „Nur WLAN“-Option
        aktiviert ist, und das WLAN des Mobiltelefons ausgeschaltet ist. Die Fehlermeldung bietet die Möglichkeit, das WLAN anzuschalten</string>
    <string name="help_errormessages_nointernet">Kein Internet</string>
    <string name="help_errormessages_nointernet_text">Erscheint die Meldung, dass kein Internet verfügbar ist, so kann die App weder über WLAN noch
        über Mobile Daten auf das Internet zugreifen. Ein Grund kann zum einen sein, dass das WLAN sowie die Mobilen Daten des Geräts deaktiviert
        sind. Zum anderen kann es aber auch sein, dass das Telefon keinen Empfang hat.</string>

</resources>
